Added configuration reading for registration opening time.

--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,7 @@ emailFrom,ThrowawayGmailHere
 emailPass,ThrowawayGmailPasswordHere
 emailTo,RecipientEmailHere
 polling,120
+date-time,2019-04-10-18-00 # YYYY-MM-DD-HH-MM (hours and minutes in 24h time.)
 ############################################### This line is ignored ####################################################
 MATH,152
 546 545 544
